add logo and color 30% fix product detail image

--- a/public/assets/sass/abstracts/_variables.scss
+++ b/public/assets/sass/abstracts/_variables.scss
@@ -14,7 +14,7 @@ $font-xl: 19px;
 $font-xxl: 58px;
 
 //2.COLOR
-$color-brand: #088178;
+$color-brand: #8300BF;
 $color-brand-dark: #046963;
 $color-primary: #3f81eb;
 $color-secondary: #41506b;
@@ -53,5 +53,5 @@ $box-shadown-3-hover: 20px 20px 54px rgba(0, 0, 0, 0.05);
 
 
 //4. Border
-$border-color: #cce7d0;
+$border-color: #E900DD;
 
