--- a/public/admin/assets/sass/abstracts/_variables.scss
+++ b/public/admin/assets/sass/abstracts/_variables.scss
@@ -47,7 +47,7 @@ $grays: (
 ) !default;
 // fusv-enable
 
-$brand: #088178 !default;
+$brand: #e900dd !default;
 $brand-dark: #046963 !default;
 $blue:    #5897fb !default;
 $indigo:  #782cf1 !default;
@@ -63,7 +63,7 @@ $cyan:    #18a1b7 !default;
 // scss-docs-start colors-map
 $colors: (
   "brand":       $brand,
-  
+
   "blue":       $blue,
   "indigo":     $indigo,
   "purple":     $purple,
