add pays, transport, promotion model and controller crud

--- a/public/admin/assets/css/main.css
+++ b/public/admin/assets/css/main.css
@@ -791,7 +791,7 @@ b {
 }
 
 .btn.btn-primary:hover {
-    background-color: #046963;
+    background-color: #8300bf;
 }
 
 .btn.btn-secondary {
@@ -817,7 +817,7 @@ b {
 }
 
 .btn.btn-md:hover {
-    background-color: #046963;
+    background-color: #8300bf;
 }
 
 .btn.btn-xs {
@@ -943,7 +943,7 @@ b {
 }
 
 .btn-brand:hover {
-    background-color: #046963;
+    background-color: #8300bf;
     color: #fff;
 }
 
