change zone and pays model, add favoris system

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4364,7 +4364,7 @@ table .product-thumbnail img {
     .product-cart-wrap
     .product-content-wrap
     .product-action-1
-    a.action-btn {
+    button.action-btn {
     border: none;
     width: auto;
     border-radius: 50px;
