--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -973,17 +973,17 @@ button[type="submit"] {
     color: #ffffff;
     border: none;
     background-color: #e900dd;
-    border: 1px solid #046963;
+    border: 1px solid #e900dd;
     border-radius: 5px;
 }
 
 button.submit:hover,
 button[type="submit"]:hover {
-    background-color: #046963 !important;
+    background-color: #8300bf !important;
 }
 
 .btn-brand:hover {
-    background-color: #046963 !important;
+    background-color: #8300bf !important;
 }
 
 .btn-login {
@@ -1019,7 +1019,7 @@ button[type="submit"]:hover {
     padding: 12px 30px;
     border-radius: 4px;
     color: #fff;
-    border: 1px solid #046963;
+    border: 1px solid #e900dd;
     background-color: #e900dd;
     cursor: pointer;
     -webkit-transition: all 300ms linear 0s;
@@ -1029,7 +1029,7 @@ button[type="submit"]:hover {
 
 .btn:hover,
 .button:hover {
-    background-color: #046963;
+    background-color: #8300bf;
 }
 
 .btn.btn-sm,
@@ -1627,12 +1627,12 @@ label {
     color: #ffffff;
     border: none;
     background-color: #e900dd;
-    border: 1px solid #046963;
+    border: 1px solid #8300bf;
     border-radius: 4px;
 }
 
 .comment-form button:hover {
-    background-color: #3f81eb !important;
+    background-color: #e900dd !important;
     border: none !important;
 }
 
@@ -2004,20 +2004,19 @@ label {
 
 .slider-arrow .slider-btn {
     cursor: pointer;
-    background: #e8f6ea;
+    background: #e900dd;
     width: 45px;
     height: 45px;
     position: absolute;
     display: block;
     z-index: 100;
     border-radius: 50%;
-    border: 1px solid #cce7d0;
     -webkit-transition: all 0.2s ease-out;
     transition: all 0.2s ease-out;
     text-align: center;
     line-height: 45px;
     font-size: 14px;
-    color: #e900dd;
+    color: white;
 }
 
 .slider-arrow .slider-btn.slider-prev {
@@ -2037,9 +2036,8 @@ label {
 }
 
 .slider-arrow .slider-btn:hover {
-    background-color: #e900dd;
+    background-color: #8300bf;
     color: #fff;
-    border-color: #e900dd;
 }
 
 .slider-arrow.slider-arrow-2 .slider-btn {
@@ -3600,12 +3598,13 @@ table .product-thumbnail img {
     height: 40px;
     line-height: 44px;
     border-radius: 50px;
-    background-color: #e8f6ea;
+    background-color: #e900dd;
     text-align: center;
     margin-right: 3px;
     position: relative;
     display: inline-block;
-    border: 1px solid #cce7d0;
+    border: 1px solid #ffff;
+    color: white;
 }
 
 .product-cart-wrap .product-action-1 button.small,
@@ -3679,7 +3678,7 @@ table .product-thumbnail img {
 
 .product-cart-wrap .product-action-1 button:hover,
 .product-cart-wrap .product-action-1 a.action-btn:hover {
-    background-color: #e900dd;
+    background-color: #8300bf;
     border: 1px solid transparent;
 }
 
@@ -3735,11 +3734,11 @@ table .product-thumbnail img {
 }
 
 .product-cart-wrap .product-badges span.hot {
-    background-color: #ff75a0;
+    background-color: #e900dd;
 }
 
 .product-cart-wrap .product-badges span.new {
-    background-color: #99bbad;
+    background-color: red;
 }
 
 .product-cart-wrap .product-badges span.sale {
