add shop filter and crud cart

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4560,7 +4560,7 @@ table .product-thumbnail img {
 
 .detail-qty {
     max-width: 80px;
-    padding: 9px 20px;
+    /* padding: 9px 20px; */
     position: relative;
     width: 100%;
     border-radius: 4px;
