--- a/public/admin/assets/css/main.css
+++ b/public/admin/assets/css/main.css
@@ -1036,10 +1036,10 @@ textarea.form-control {
 .select2-container--default .select2-selection--single {
     background-color: #f9f9f9;
     border: 2px solid #eee;
-    border-radius: 30px 0 0 30px !important;
+    /* border-radius: 30px 0 0 30px !important; */
     border-right: 0;
     height: 52px;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 }
 
 .select2-container--default
@@ -1158,8 +1158,8 @@ textarea.form-control {
 }
 
 .select2-container--default .select2-results__option[aria-selected="true"] {
-    background-color: #ececec;
-    color: unset;
+    background-color: #e900dd;
+    color: #fff;
 }
 
 .card-login {
