add redirect after login

--- a/public/admin/assets/css/main.css
+++ b/public/admin/assets/css/main.css
@@ -330,7 +330,7 @@ table .form-check {
 }
 
 .text-primary {
-    color: #d79f01 !important;
+    color: rgb(215, 159, 1) !important;
 }
 
 .bg-primary-light {
